Closed Bug 20366 Opened 26 years ago Closed 25 years ago

Unsuccessful IMAP folder rename makes folder disappear

Categories

(MailNews Core :: Backend, defect, P3)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: rzach, Assigned: jefft)

Details

If a folder on an IMAP server is renamed, but the rename is not successful, the folder disappears from the folder pane, only restarting Mozilla brings it back. To reproduce: 1. Open the messenger 2. Create a new folder named "Test" 3. Select another folder 4. File | Rename folder 5. Enter "Test" and click ok. Actual result: The name of the renamed folder is removed from the folder pane, the mail server responds with an error message (folder named "Test" already exists). Expected result: The error message should appear before the folder is removed from the folder list. Linux build 1999.11.30.08
Assignee: phil → jefft
Reassign to jefft
QA Contact: lchiang → huang
Status: NEW → ASSIGNED
Target Milestone: M13
I tried on today's 11-30-08-M12 build on Linux. The IMAP rename worked fine. I can rename folder successfully wothout exit the application. Just need to wait for the change to reflect on the folder panel. Jeff, can you try this for today build?
Based on your test procedures, I am thinking that the error which you got should be correct since there was a folder name "Test" which you already created, and if you want to rename to "Test" again. The error dialog should display: 'folder named "Test" already exists' which should be correct!!
Yes the error message is correct. But the name of the folder to be renamed should not be removed from the folder list before the rename has actually taken effect on the server. In other words, what should happen is: send request to server first, wait for response, then change folder name in folder list.
No doubt about it. The problem exists. If you already have a folder with the same name you are trying to rename to. It'll fail eventually. However, the old folder has been removed from the folder pane. You can only get it back when you relaunch the mail app. The right way to solve the problem is until we get the rename succeeded response from the server we don't remove the old folder from the folder view.
It seemed this problem sometimes happened, sometimes not. I got the error message now....
Target Milestone: M13 → M14
M14 ....
Partial fix checked in. Still need to work out name conflicts with not subscribed folders.
FYI: Build 2000012812M14: Mac 8.5.1 Using an IMAP account, I renamed a folder to a name that is not used by any other folder. The folder disappears after renaming it and displays after closing and restarting mail. I didn't see this problem using Linux or NT so for this build it's only a problem on the Mac.
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Verified on Linux build 2000.03.01.08. Should this be tested on other platforms?
Yes. Karen (huang) can verify on Mac and Windows. Thanks, Richard!
Yes. I was trying to reply this message but bugzilla was down at that time... I will verify on the other platforms. Thanks for the updates.
Verified on all the platforms: Linux 03-01-08-M15 commercial build WinNT 03-01-09-M15 commercial build Mac 03-01-08-M15 commercial build All work fine now...marking as verified!!
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.