partial fix for bug 20366 - imap folder rename problem; rename OnCloseFolder to ForceDBClose; r=bienvenu